style: notification fixes for dark mode

--- a/packages/gatsby-theme-carbon/src/components/PageHeader/PageHeader.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/PageHeader/PageHeader.module.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  border-bottom: 1px solid $carbon--gray-80;
 }
 
 .with-tabs {
